--- a/index.html
+++ b/index.html
@@ -1,9 +1,13 @@
 <!DOCTYPE html>
 <html lang="en-US">
     <head>
-     <meta charset="utf-8">
+        <meta charset="utf-8">
         <meta name="viewport" content="width= divice-width, initial-scale= 1.0">
         <title>Dillan S. Torres | wdd130</title>
+        <meta name="description" content="it's a profile web with a name and brief brescrition about me">
+        <meta name="author" content="Dillan S. Torres">
+        
+        <link rel="stylesheet" href="styles/style.css">
     </head>
     <body>
         <header>
