--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width= divice-width, initial-scale= 1.0">
         <title>Dillan S. Torres | wdd130</title>
-        <meta name="description" content="it's a profile web with a name and brief brescrition about me">
+        <meta name="description" content="Dillan S. Torres description about me and my country.">
         <meta name="author" content="Dillan S. Torres">
 
         <link rel="stylesheet" href="styles/style.css">
@@ -21,6 +21,11 @@
         <img src="images/profile.jpg" alt="Dillan S. Torres" width="200">
         <p>My name is Dillan Samuel Torres, I am from Ecuador and I am studying <strong>software development</strong>. I like to read books and sports, especially "basketball" and I hope to continue learning more about programming and software.</p>
     </main>
+    <aside>
+        <h2>Ecuador</h2>
+        <img src="https://th.bing.com/th/id/R.a73919eb49053738fd1392ba8ddaa27e?rik=nGXHp7GKjPSQww&pid=ImgRaw&r=0" alt="Ecuador, Guayaquil" width="200">
+        <p>Ecuador is a country with diverse landscapes and cultures, located in the northwestern region of South America. Its territory includes the coast, the Andes, and the Amazon, and is famous for the Galapagos Islands. Guayaquil, its main port and second-largest city, is an economic and commercial engine of the country, known for its dynamism and growth. Quito, the capital, stands out for its historical heritage. Ecuador is a country rich in biodiversity and traditions.</p>
+    </aside>
     <footer>
         <p>©2025 ⨳ Dillan Torres ⨳ Guayaquil, Ecuador</p>
     </footer>
