--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width= divice-width, initial-scale= 1.0">
-        <title>Dillan S. Torres | wdd130</title>
-        <meta name="description" content="Dillan S. Torres description about me and my country.">
-        <meta name="author" content="Dillan S. Torres">
+        <title>Dillan Samuel Torres | wdd130</title>
+        <meta name="description" content="Dillan Samuel Torres description about me and my country.">
+        <meta name="author" content="Dillan Samuel Torres">
 
-        <link rel="stylesheet" href="styles/style.css">
+        <link rel="stylesheet" href="styles/styles.css">
     </head>
     <body>
         <header>
@@ -17,13 +17,13 @@
             </nav>
         </header>
     <main>
-        <h1>Dillan S. Torres | wdd130</h1>
+        <h1>Dillan Samuel Torres | wdd130</h1>
         <img src="images/profile.jpg" alt="Dillan S. Torres" width="200">
         <p>My name is Dillan Samuel Torres, I am from Ecuador and I am studying <strong>software development</strong>. I like to read books and sports, especially "basketball" and I hope to continue learning more about programming and software.</p>
     </main>
     <aside>
         <h2>Ecuador</h2>
-        <img src="https://th.bing.com/th/id/R.a73919eb49053738fd1392ba8ddaa27e?rik=nGXHp7GKjPSQww&pid=ImgRaw&r=0" alt="Ecuador, Guayaquil" width="200">
+        <img src="images/country.jpg" alt="Ecuador, Guayaquil" width="200">
         <p>Ecuador is a country with diverse landscapes and cultures, located in the northwestern region of South America. Its territory includes the coast, the Andes, and the Amazon, and is famous for the Galapagos Islands. Guayaquil, its main port and second-largest city, is an economic and commercial engine of the country, known for its dynamism and growth. Quito, the capital, stands out for its historical heritage. Ecuador is a country rich in biodiversity and traditions.</p>
     </aside>
     <footer>
