--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width= divice-width, initial-scale= 1.0">
-        <title>Dillan Samuel Torres | wdd130</title>
-        <meta name="description" content="Dillan Samuel Torres description about me and my country.">
-        <meta name="author" content="Dillan Samuel Torres">
+        <title>Dillan Samuel Torres Flor | WDD130</title>
+        <meta name="description" content="Dillan Samuel Torres Flor description about me and my country, it's my home page of my course wdd130.">
+        <meta name="author" content="Dillan Samuel Torres Flor">
 
         <link rel="stylesheet" href="styles/styles.css">
     </head>
@@ -17,7 +17,7 @@
             </nav>
         </header>
     <main>
-        <h1>Dillan Samuel Torres | wdd130</h1>
+        <h1>Dillan Samuel Torres Flor | WDD130</h1>
         <img src="images/profile.jpg" alt="Dillan S. Torres" width="200">
         <p>My name is Dillan Samuel Torres, I am from Ecuador and I am studying <strong>software development</strong>. I like to read books and sports, especially "basketball" and I hope to continue learning more about programming and software.</p>
     </main>
