--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+ <!-- 18/03/2025 -->
 <!DOCTYPE html>
 <html lang="en-US">
     <head>
@@ -12,16 +13,25 @@
     <body>
         <header>
             <nav>
-                 <a href="#">home</a>
+                 <a href="#">Home</a>
                  <a href="wwr/">Rafting Website</a>
+                 <a href="https://www.linkedin.com/in/samuel-torres-11bb27339/">Porfile</a>
             </nav>
         </header>
     <main>
         <h1>Dillan Samuel Torres Flor | WDD130</h1>
         <img src="images/profile.jpg" alt="Dillan S. Torres" width="200">
-        <p>My name is Dillan Samuel Torres, I am from Ecuador and I am studying <strong>software development</strong>. I like to read books and sports, especially "basketball" and I hope to continue learning more about programming and software.</p>
+        <p>My name is Dillan Samuel Torres, I am from Ecuador and I am studying <strong>software development</strong>. I like to read books, swimming, listening to music, and sports, especially "basketball"
+            since I was a child I have always been attracted to programming but I never took a step to learn, in the time when I was serving mission I met a very good friend who encouraged me to start on this path 
+            and today I feel good and every day I learn something new. One of my goals when learning to program and develop software is to be able to work in a good company like "Microsoft" and also to study other branches of programming and technology. 
+            I hope to continue learning more about programming and software.</p>
+        <ul class="box">
+            <li><a href="https://www.churchofjesuschrist.org/temples/details/salt-lake-temple?lang=eng">Salt Lake Temple</a></li>
+            <li><a href="https://www.churchofjesuschrist.org/temples/details/idaho-falls-idaho-temple?lang=eng">Idaho Falls Temple</a></li>
+            <li><a href="https://www.churchofjesuschrist.org/temples/details/salt-lake-temple?lang=eng">Guayaquil Ecuador Temple</a></li>
+        </ul>
     </main>
-    <aside>
+    <aside class="box">
         <h2>Ecuador</h2>
         <img src="images/country.jpg" alt="Ecuador, Guayaquil" width="200">
         <p>Ecuador is a country with diverse landscapes and cultures, located in the northwestern region of South America. Its territory includes the coast, the Andes, and the Amazon, and is famous for the Galapagos Islands. Guayaquil, its main port and second-largest city, is an economic and commercial engine of the country, known for its dynamism and growth. Quito, the capital, stands out for its historical heritage. Ecuador is a country rich in biodiversity and traditions.</p>
@@ -29,5 +39,5 @@
     <footer>
         <p>©2025 ⨳ Dillan Torres ⨳ Guayaquil, Ecuador</p>
     </footer>
-    </body>
+    </body>  
 </html>
