--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
- <!-- 18/03/2025 -->
 <!DOCTYPE html>
 <html lang="en-US">
     <head>
@@ -25,12 +24,12 @@
             since I was a child I have always been attracted to programming but I never took a step to learn, in the time when I was serving mission I met a very good friend who encouraged me to start on this path 
             and today I feel good and every day I learn something new. One of my goals when learning to program and develop software is to be able to work in a good company like "Microsoft" and also to study other branches of programming and technology. 
             I hope to continue learning more about programming and software.</p>
-        <ul class="box">
-            <li><a href="https://www.churchofjesuschrist.org/temples/details/salt-lake-temple?lang=eng">Salt Lake Temple</a></li>
-            <li><a href="https://www.churchofjesuschrist.org/temples/details/idaho-falls-idaho-temple?lang=eng">Idaho Falls Temple</a></li>
-            <li><a href="https://www.churchofjesuschrist.org/temples/details/salt-lake-temple?lang=eng">Guayaquil Ecuador Temple</a></li>
-        </ul>
     </main>
+    <ul class="box">
+        <li><a href="https://www.churchofjesuschrist.org/temples/details/salt-lake-temple?lang=eng">Salt Lake Temple</a></li>
+        <li><a href="https://www.churchofjesuschrist.org/temples/details/idaho-falls-idaho-temple?lang=eng">Idaho Falls Temple</a></li>
+        <li><a href="https://www.churchofjesuschrist.org/temples/details/salt-lake-temple?lang=eng">Guayaquil Ecuador Temple</a></li>
+    </ul>
     <aside class="box">
         <h2>Ecuador</h2>
         <img src="images/country.jpg" alt="Ecuador, Guayaquil" width="200">
@@ -39,5 +38,5 @@
     <footer>
         <p>©2025 ⨳ Dillan Torres ⨳ Guayaquil, Ecuador</p>
     </footer>
-    </body>  
+    </body>   <!-- 18/03/2025 -->
 </html>
