--- a/wwr/about.html
+++ b/wwr/about.html
@@ -18,10 +18,12 @@
                 <img src="images/logo.png" alt="logo" width="100">
             </div>
             <nav class="menu">
-                    <div class="menu-item"><a href="index.html">Home</a></div>
-                    <div class="menu-item"><a href="about.html">About us</a></div>
-                    <div class="menu-item"><a href="trip.html">Trips</a></div>
-                    <div class="menu-item"><a href="contact.html">Contact us</a></div>
+                <div class="menu-item">
+                    <a href="index.html">Home</a></div>
+                    <a href="about.html">About us</a></div>
+                    <a href="trip.html">Trips</a>
+                    <a href="contact.html">Contact us</a>
+                </div>
             </nav>
         </header>
         <main>
@@ -48,7 +50,7 @@
                     eius reiciendis soluta amet eum repellendus repudiandae!</p>
             </section>
             <section>
-                <h3>Adventure Awaits you</h3>
+                <h2>Adventure Awaits you</h2>
                 <div class="img-box">
                     <img src="images/adventure1.jpg" alt="">
                     <img src="images/adventure2.jpg" alt="">
