--- a/wwr/about.html
+++ b/wwr/about.html
@@ -2,7 +2,7 @@
 <html lang="en-US">
     <head> 
         <meta charset="utf-8">
-        <meta name="viewport" content="width= divice-width, initial-scale= 1.0">
+        <meta name="viewport" content="width=device-width,initial-scale=1.0">
         <title>rafting website project</title>
         <meta name="description" content="This page provides contact information, history, and other promotions for the compan">
         <meta name="author" content="Dillan Samuel Torres">
@@ -19,8 +19,8 @@
             </div>
             <nav class="menu">
                 <div class="menu-item">
-                    <a href="index.html">Home</a></div>
-                    <a href="about.html">About us</a></div>
+                    <a href="index.html">Home</a>
+                    <a href="about.html">About us</a>
                     <a href="trip.html">Trips</a>
                     <a href="contact.html">Contact us</a>
                 </div>
