--- a/wwr/about.html
+++ b/wwr/about.html
@@ -21,7 +21,7 @@
                 <div class="menu-item">
                     <a href="index.html">Home</a>
                     <a href="about.html">About us</a>
-                    <a href="trip.html">Trips</a>
+                    <a href="trips.html">Trips</a>
                     <a href="contact.html">Contact us</a>
                 </div>
             </nav>
