--- a/index.html
+++ b/index.html
@@ -2,41 +2,49 @@
 <html lang="en-US">
     <head>
         <meta charset="utf-8">
-        <meta name="viewport" content="width= divice-width, initial-scale= 1.0">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Dillan Samuel Torres Flor | WDD130</title>
         <meta name="description" content="Dillan Samuel Torres Flor description about me and my country, it's my home page of my course wdd130.">
         <meta name="author" content="Dillan Samuel Torres Flor">
-
+        
+        <!-- Enlace al archivo CSS -->
         <link rel="stylesheet" href="styles/styles.css">
     </head>
     <body>
         <header>
             <nav>
-                 <a href="#">Home</a>
-                 <a href="wwr/">Rafting Website</a>
-                 <a href="https://www.linkedin.com/in/samuel-torres-11bb27339/">Porfile</a>
+                <a href="#">Home</a>
+                <a href="wwr/">Rafting Website</a>
+                <a href="https://www.linkedin.com/in/samuel-torres-11bb27339/" target="_blank">Linkedin</a>
+                <a href="https://www.facebook.com/DellSamTorr" target="_blank">Facebook</a>
             </nav>
         </header>
-    <main>
-        <h1>Dillan Samuel Torres Flor | WDD130</h1>
-        <img src="images/profile.jpg" alt="Dillan S. Torres" width="200">
-        <p>My name is Dillan Samuel Torres, I am from Ecuador and I am studying <strong>software development</strong>. I like to read books, swimming, listening to music, and sports, especially "basketball"
-            since I was a child I have always been attracted to programming but I never took a step to learn, in the time when I was serving mission I met a very good friend who encouraged me to start on this path 
-            and today I feel good and every day I learn something new. One of my goals when learning to program and develop software is to be able to work in a good company like "Microsoft" and also to study other branches of programming and technology. 
-            I hope to continue learning more about programming and software.</p>
-    </main>
-    <ul class="box">
-        <li><a href="https://www.churchofjesuschrist.org/temples/details/salt-lake-temple?lang=eng">Salt Lake Temple</a></li>
-        <li><a href="https://www.churchofjesuschrist.org/temples/details/idaho-falls-idaho-temple?lang=eng">Idaho Falls Temple</a></li>
-        <li><a href="https://www.churchofjesuschrist.org/temples/details/salt-lake-temple?lang=eng">Guayaquil Ecuador Temple</a></li>
-    </ul>
-    <aside class="box">
-        <h2>Ecuador</h2>
-        <img src="images/country.jpg" alt="Ecuador, Guayaquil" width="200">
-        <p>Ecuador is a country with diverse landscapes and cultures, located in the northwestern region of South America. Its territory includes the coast, the Andes, and the Amazon, and is famous for the Galapagos Islands. Guayaquil, its main port and second-largest city, is an economic and commercial engine of the country, known for its dynamism and growth. Quito, the capital, stands out for its historical heritage. Ecuador is a country rich in biodiversity and traditions.</p>
-    </aside>
-    <footer>
-        <p>©2025 ⨳ Dillan Torres ⨳ Guayaquil, Ecuador</p>
-    </footer>
-    </body>   <!-- 18/03/2025 -->
+
+        <!-- Div con clase "grid" que contiene main y aside -->
+        <div class="grid">
+            <main>
+                <h1>Dillan Samuel Torres Flor | WDD130</h1>
+                <img class="profile-img" src="images/profile.jpg" alt="Dillan S. Torres">
+                <p>My name is Dillan Samuel Torres, I am from Ecuador and I am studying <strong>software development</strong>. I like to read books, swimming, listening to music, and sports, especially "basketball"
+                    since I was a child I have always been attracted to programming but I never took a step to learn, in the time when I was serving mission I met a very good friend who encouraged me to start on this path 
+                    and today I feel good and every day I learn something new. One of my goals when learning to program and develop software is to be able to work in a good company like "Microsoft" and also to study other branches of programming and technology. 
+                    I hope to continue learning more about programming and software.</p>
+                <ul class="box">
+                    <li><a href="https://www.churchofjesuschrist.org/temples/details/salt-lake-temple?lang=eng">Salt Lake Temple</a></li>
+                    <li><a href="https://www.churchofjesuschrist.org/temples/details/idaho-falls-idaho-temple?lang=eng">Idaho Falls Temple</a></li>
+                    <li><a href="https://www.churchofjesuschrist.org/temples/details/salt-lake-temple?lang=eng">Guayaquil Ecuador Temple</a></li>
+                </ul>
+            </main>
+
+            <aside>
+                <h2>Ecuador</h2>
+                <img src="images/country.jpg" alt="Ecuador, Guayaquil" width="200">
+                <p>Ecuador is a country with diverse landscapes and cultures, located in the northwestern region of South America. Its territory includes the coast, the Andes, and the Amazon, and is famous for the Galapagos Islands. Guayaquil, its main port and second-largest city, is an economic and commercial engine of the country, known for its dynamism and growth. Quito, the capital, stands out for its historical heritage. Ecuador is a country rich in biodiversity and traditions.</p>
+            </aside>
+        </div>
+
+        <footer>
+            <p>©2025 ⨳ Dillan Torres ⨳ Guayaquil, Ecuador</p>
+        </footer>
+    </body>
 </html>
