--- a/wwr/about.html
+++ b/wwr/about.html
@@ -14,29 +14,28 @@
     </head>
     <body>
         <header>
-            <div class="logo-box">
-                <img src="images/logo.png" alt="logo" width="100">
-            </div>
-            <nav class="menu">
-                <div class="menu-item">
-                    <a href="index.html">Home</a>
-                    <a href="about.html">About us</a>
-                    <a href="trips.html">Trips</a>
-                    <a href="contact.html">Contact us</a>
-                </div>
+                <img src="images/logo.png" alt="logo">
+                <h1>Fast Water Rafting</h1>
+            <nav>
+                <div class="menu">
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="about.html">About us</a></li>
+                    <li><a href="trips.html">Trips</a></li>
+                    <li><a href="contact.html">Contact us</a></li>
+                <div>
             </nav>
         </header>
         <main>
             <div class="head">
                 <img src="images/head.jpg" alt="happy workers">
-                <h1>White Water Rafting</h1>
+                <h1>Fast Water Rafting</h1>
             </div>
-                <article>
-                    <img src="images/rafting.jpg" alt="break time" width="150">
+                <article class="article-box">
                     <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit.
                         Est repudiandae sunt atque iusto maxime commodi corrupti 
                         facilis ad voluptatem libero mollitia quas exercitationem, 
                         rem in? Veritatis exercitationem porro voluptas eius!</p>
+                    <img src="images/rafting.jpg" alt="break time">
                 </article>
             <section class="box-h2">
                 <h2>History</h2>
@@ -61,9 +60,8 @@
             </section>
         </main>
         <footer> 
-            <nav class="logo-media">
+            <nav class="logo-media">    
                 <p>©2025 | Dillan S. Torres | Ecuador Guayaquil</p>
-                <p>visit us</p>
                 <a href="https://www.facebook.com/" target="_blank">
                     <img src="images/facebook-icon.webp" alt="logo" width="30">
                 </a>
