--- a/wwr/about.html
+++ b/wwr/about.html
@@ -3,74 +3,100 @@
     <head> 
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width,initial-scale=1.0">
-        <title>rafting website project</title>
-        <meta name="description" content="This page provides contact information, history, and other promotions for the compan">
+        <title>Fast Water Rafting</title>
+        <meta name="description" content="This page provides contact information, history, and other promotions for the company.">
         <meta name="author" content="Dillan Samuel Torres">
-
         <link rel="stylesheet" href="styles/rafting.css">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Roboto+Flex:opsz,wght@8..144,100..1000&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700&display=swap" rel="stylesheet">
     </head>
     <body>
         <header>
-                <img src="images/logo.png" alt="logo">
-                <h1>Fast Water Rafting</h1>
             <nav>
-                <div class="menu">
+                <img src="images/logo.png" alt="Fast Water Rafting Logo">
+                <h1>Fast Water Rafting</h1>
+                <ul class="menu">
                     <li><a href="index.html">Home</a></li>
                     <li><a href="about.html">About us</a></li>
                     <li><a href="trips.html">Trips</a></li>
                     <li><a href="contact.html">Contact us</a></li>
-                <div>
+                </ul>
             </nav>
         </header>
+
         <main>
-            <div class="head">
-                <img src="images/head.jpg" alt="happy workers">
+            <section class="head">
                 <h1>Fast Water Rafting</h1>
-            </div>
+                <img src="images/head.jpg" alt="Happy work">
                 <article class="article-box">
-                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit.
-                        Est repudiandae sunt atque iusto maxime commodi corrupti 
-                        facilis ad voluptatem libero mollitia quas exercitationem, 
-                        rem in? Veritatis exercitationem porro voluptas eius!</p>
-                    <img src="images/rafting.jpg" alt="break time">
+                    <p>
+                        <strong>Experience the Thrill at Fast Water Rafting!</strong> 
+                        Are you ready for an adrenaline-packed adventure? At Fast Water Rafting, 
+                        we take you through the most exciting rapids while you enjoy breathtaking moments.
+                        <strong>Join us for an unforgettable adventure!</strong>
+                    </p>
                 </article>
+            </section>
+
             <section class="box-h2">
                 <h2>History</h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-                    Odit culpa placeat beatae facere necessitatibus aperiam 
-                    cumque soluta praesentium, ex eius. Quasi, blanditiis natus 
-                    dignissimos quae aspernatur est voluptas facilis voluptatum 
-                    quam error dolorum praesentium delectus maiores porro consequatur 
-                    dolores deleniti, rerum, ipsam accusantium ducimus perspiciatis 
-                    nobis enim perferendis sequi. Dolore quia consequuntur rerum, 
-                    eius reiciendis soluta amet eum repellendus repudiandae!</p>
-            </section>
+                <div class="text-left">
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+                        Odit culpa placeat beatae facere necessitatibus aperiam 
+                        cumque soluta praesentium, ex eius.</p>
+                </div>
+                <div class="image-container">
+                    <img src="images/rafting.jpg" alt="Rafting Adventure">
+                </div>
+                <div class="text-right">
+                    <p>Quasi, blanditiis natus dignissimos quae aspernatur est voluptas 
+                        facilis voluptatum quam error dolorum praesentium delectus maiores porro consequatur 
+                        dolores deleniti, rerum, ipsam accusantium.</p>
+                </div>
+            </section>    
+
             <section>
-                <h2>Adventure Awaits you</h2>
+                <h2>Adventure Awaits You</h2>
                 <div class="img-box">
-                    <img src="images/adventure1.jpg" alt="">
-                    <img src="images/adventure2.jpg" alt="">
-                    <img src="images/adventure3.jpg" alt="">
-                    <img src="images/raft-rapid.jpg" alt="">
-                    <img src="images/rafting2.jpg" alt="">
+                    <figure>
+                        <img src="images/adventure1.jpg" alt="Sulphur Creek, Utah">
+                        <figcaption>Sulphur Creek, Utah</figcaption>
+                    </figure>
+                    <figure>
+                        <img src="images/adventure2.jpg" alt="Rafting, Teamwork">
+                        <figcaption>Rafting, Teamwork</figcaption>
+                    </figure>
+                    <figure>
+                        <img src="images/adventure3.jpg" alt="Extreme sports enthusiasts">
+                        <figcaption>People who like extreme sports</figcaption>
+                    </figure>
+                    <figure>    
+                        <img src="images/raft-rapid.jpg" alt="Fast Water Rafting">
+                        <figcaption>Fast Water Rafting</figcaption>
+                    </figure>
+                    <figure>
+                        <img src="images/rafting2.jpg" alt="Köprülü Kanyon Milli Parkı">
+                        <figcaption>Köprülü Kanyon Milli Parkı</figcaption>
+                    </figure>
                 </div>
             </section>
         </main>
+
         <footer> 
             <nav class="logo-media">    
-                <p>©2025 | Dillan S. Torres | Ecuador Guayaquil</p>
-                <a href="https://www.facebook.com/" target="_blank">
-                    <img src="images/facebook-icon.webp" alt="logo" width="30">
-                </a>
-                <a href="https://x.com/" target="_blank">
-                    <img src="images/twitter.webp" alt="logo" width="30">
-                </a>
-                <a href="https://www.instagram.com/" target="_blank">
-                    <img src="images/instagram.webp" alt="logo" width="30">
-                </a>
+                <p>©2025 | Dillan S. Torres | Ecuador, Guayaquil</p>
+                <div class="social-icons">
+                    <a href="https://www.facebook.com/" target="_blank">
+                        <img src="images/facebook-icon.webp" alt="Facebook">
+                    </a>
+                    <a href="https://x.com/" target="_blank">
+                        <img src="images/twitter.webp" alt="Twitter">
+                    </a>
+                    <a href="https://www.instagram.com/" target="_blank">
+                        <img src="images/instagram.webp" alt="Instagram">
+                    </a>
+                </div>
             </nav>
         </footer>
     </body>
