--- a/wwr/about.html
+++ b/wwr/about.html
@@ -44,7 +44,8 @@
                 <div class="text-left">
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
                         Odit culpa placeat beatae facere necessitatibus aperiam 
-                        cumque soluta praesentium, ex eius.</p>
+                        cumque soluta praesentium, ex eius. porro consequatur dolores 
+                        deleniti, rerum, ipsam accusantium.</p>
                 </div>
                 <div class="image-container">
                     <img src="images/rafting.jpg" alt="Rafting Adventure">
