--- a/wwr/about.html
+++ b/wwr/about.html
@@ -3,8 +3,8 @@
     <head> 
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width,initial-scale=1.0">
-        <title>Fast Water Rafting</title>
-        <meta name="description" content="This page provides contact information, history, and other promotions for the company.">
+        <title>Fast Water Rafting "About Us"</title>
+        <meta name="description" content="Through this page we want to provide you with this service, so that you can have fun and experience more of this extreme sport..">
         <meta name="author" content="Dillan Samuel Torres">
         <link rel="stylesheet" href="styles/rafting.css">
         <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -31,10 +31,10 @@
                 <img src="images/head.jpg" alt="Happy work">
                 <article class="article-box">
                     <p>
-                        <strong>Experience the Thrill at Fast Water Rafting!</strong> 
+                        Experience the Thrill at Fast Water Rafting!
                         Are you ready for an adrenaline-packed adventure? At Fast Water Rafting, 
                         we take you through the most exciting rapids while you enjoy breathtaking moments.
-                        <strong>Join us for an unforgettable adventure!</strong>
+                        Join us for an unforgettable adventure!
                     </p>
                 </article>
             </section>
