--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -33,7 +33,7 @@
                     <p><strong>Number:</strong> +593 939 955 102</p>
                     <p><strong>Email:</strong> info@fastwaterrafting.com</p>
                     <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d86170.4058693935!2d-105.21146582714869!3d39.73059492336948!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2sec!4v1743794239035!5m2!1sen!2sec" 
-                        width="250" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade">
+                        width="250" height="300" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade">
                     </iframe>
                 </div>
             </section>
@@ -59,25 +59,25 @@
                     <fieldset class="middle">
                         <legend>Send Us a Message</legend>
                         <div class="box-comment">
-                            <label for="User name">Full Name</label>
-                            <input type="text" id="User name" name="User name ">
+                            <label for="Username">Full Name</label>
+                            <input type="text" id="Username" name="Username ">
                         </div>
                         <div class="box-comment">
-                            <label for="user email">Email</label>
-                            <input type="text" id="user email" name="user email">
+                            <label for="useremail">Email</label>
+                            <input type="text" id="useremail" name="useremail">
                         </div>
                         <p>Purpose of Message:</p>
                         <div class="box-menssage">
                             <label>
-                                <input type="radio" name="purpose" value="general" required>
+                                <input type="radio" id="purpose" name="purpose" value="general" required>
                                 General Inquiry
                             </label>
                             <label>
-                                <input type="radio" name="purpose" value="booking">
+                                <input type="radio" id="purpose" name="purpose" value="booking">
                                 Booking Question
                             </label>
                             <label>
-                                <input type="radio" name="purpose" value="suggestion">
+                                <input type="radio" id="purpose" name="purpose" value="suggestion">
                                 Website Suggestion
                             </label>
                             <label for="message">Message:</label><br>
@@ -85,10 +85,12 @@
                         </div>
                         <label for="subscribe">Please subscribe me to the monthly newsletter</label>
                         <input type="checkbox" id="subscribe" name="subscribe">
-                        <button type="submit">Submit</botton>
+                        <button type="submit">
+                            Submit
+                        </botton>
                     </fieldset> 
                 </form>
-            </section>>
+            </section>
         </main>
 
         <footer class="logo-media"> 
