--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -69,15 +69,15 @@
                         <p>Purpose of Message:</p>
                         <div class="box-menssage">
                             <label>
-                                <input type="radio" id="purpose" name="purpose" value="general" required>
+                                <input type="radio" id="general" name="purpose" value="general" required>
                                 General Inquiry
                             </label>
                             <label>
-                                <input type="radio" id="purpose" name="purpose" value="booking">
+                                <input type="radio" id="booking" name="purpose" value="booking">
                                 Booking Question
                             </label>
                             <label>
-                                <input type="radio" id="purpose" name="purpose" value="suggestion">
+                                <input type="radio" id="Website" name="purpose" value="suggestion">
                                 Website Suggestion
                             </label>
                             <label for="message">Message:</label><br>
