--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -60,7 +60,7 @@
                         <legend>Send Us a Message</legend>
                         <div class="box-comment">
                             <label for="Username">Full Name</label>
-                            <input type="text" id="Username" name="Username ">
+                            <input type="text" id="Username" name="Username">
                         </div>
                         <div class="box-comment">
                             <label for="useremail">Email</label>
@@ -87,7 +87,7 @@
                         <input type="checkbox" id="subscribe" name="subscribe">
                         <button type="submit">
                             Submit
-                        </botton>
+                        </button>
                     </fieldset> 
                 </form>
             </section>
