--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -26,7 +26,7 @@
         </header>
 
         <main class="grid-container frist">
-            <section class="header title">
+            <section class="header_title">
                 <h1>Company information</h1>
                 <div class="map">
                     <p><strong>Address:</strong> 123 Rapids Way, Adventure Town, CO 80401, USA</p>
