finish the proyect

--- a/wwr/trips.html
+++ b/wwr/trips.html
@@ -33,19 +33,19 @@
             </section>
             <section class="trip-details-grid">
                 <div class="trip-card">
-                  <img src="images/trips1.jpg" alt="Beginner Rafting Adventure">
+                  <img src="images/Trips1.jpg" alt="Beginner Rafting Adventure">
                   <h3>Beginner Rapids</h3>
                   <p>Perfect for first-timers and families. Enjoy scenic views and mild rapids with our experienced guides.</p>
                 </div>
               
                 <div class="trip-card">
-                  <img src="images/trips2.jpg" alt="Intermediate Rapids Adventure">
+                  <img src="images/Trips2.jpg" alt="Intermediate Rapids Adventure">
                   <h3>Intermediate Challenge</h3>
                   <p>A great balance of excitement and scenery. Ideal for those with some experience looking to level up.</p>
                 </div>
               
                 <div class="trip-card">
-                  <img src="images/trips3.jpg" alt="Advanced Whitewater Adventure">
+                  <img src="images/Trips3.jpg" alt="Advanced Whitewater Adventure">
                   <h3>Advanced Whitewater</h3>
                   <p>Intense rapids and adrenaline-packed routes. Recommended for experienced adventurers seeking thrills.</p>
                 </div>
